# fastkb

./: .gitignore  LICENSE  MCP.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
fastkb/: __main__.py
src/fastkb/: __main__.py  cli.py  commands.py  database.py  files.py  mcp_server.py  parser.py  search.py  settings.py
