[project]
name = "fastkb"
version = "0.2.5"
description = "CLI utilit to find info in file system"
readme = "README.md"
authors = [
    { name = "Egor Morozik", email = "egor.mrz04@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = [
    "mcp>=1.27.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[project.scripts]
fastkb = "fastkb.__main__:main"
fastkb-mcp = "fastkb.mcp_server:run"
